--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/김용브/servlet/apache-tomcat-9.0.55/lib/mysql-connector-java-8.0.27.jar">
+	<classpathentry kind="lib" path="C:/Users/User/Desktop/servlet/apache-tomcat-9.0.55/apache-tomcat-9.0.55/lib/mysql-connector-java-8.0.27.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
